# quore

./: .dockerignore  .gitignore  .markdownlint.yaml  .tool-versions  Dockerfile  README.md  alembic.ini  bug_report.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run.py  run_worker.py  start.sh  workspace_validation_bug_fix.md
.cursor/rules/: routers.mdc  tests.mdc
.github/workflows/: push.yml  python.yml  qodo.yml.none
alembic/: env.py
alembic/versions/: 07379a96de6a_add_plugin_states.py  1a2b3c4d5e6f_add_locked_field_to_workspace.py  1cb0905fcc56_create_credentials.py  2025_08_13_1133-79b2291772fd_add_project_ids_to_invitations.py  2025_09_11_1035-8221a1580c54_add_defaults_llm_settings_to_the_.py  2025_09_11_1106-03599d07def1_update_prompts_unique_constraint.py  2025_09_18_1210-4b166d9ede11_update_prompt_id_unique_constrain.py  2025_11_15_2233-073ed29a9363_add_rag_settings.py  2550d4723c64_add_identifier_to_workspace.py  2b3c4d5e6f70_add_system_prompt_to_workspace.py  408f37fbcf8b_add_vision_fields_to_project.py  40c926724af0_add_global_and_enable_fields.py  683b967a0ded_create_invitations.py  902fef3104d3_add_soft_delete_to_all_models.py  9849583adcd0_create_prompts_table.py  aa11bb22cc33_create_project_memberships.py  aeca0aab0e4d_create_memberships.py  c1a2b3c4d5e6_update_prompts_unique_constraint.py  create_users_table.py  create_workspace_table.py  d72aa09a5f76_add_notes_to_prompts.py  d9067bce9b24_create_plugins.py  e40d9faf9872_create_projects.py  ed70d724812c_create_app_settings.py  fbbfd4b09ee7_add_labels_to_projects.py  fbbfd4b09ee7_add_metadata_to_projects.py
app/: config.py  db.py  main.py
app/commands/: initialize_plugin.py  inspect_plugin.py
app/constants/: credentials.py  membership.py  plugin_states.py  providers.py
app/core/: celery_app.py  credentials.py  index_manager.py  ingestor.py  logging_config.py  mcp_client.py  path_manager.py  storage_context.py  storage_manager.py  system_setup.py  workflow_manager.py
app/exceptions/: handlers.py  invitation_exceptions.py  workspace_exceptions.py
app/middleware/: __init__.py  authentication.py  db_session.py
app/models/: __init__.py  app_setting.py  credential.py  invitation.py  membership.py  mixins.py  node.py  plugin.py  plugin_tool.py  project.py  project_membership.py  project_plugin.py  project_plugin_tool.py  prompt.py  user.py  workspace.py
app/plugins/: accounts.py  datetime.py  debug.py  vision.py
app/routers/: app_setting.py  assistant.py  credential.py  flower.py  ingest.py  invitation.py  llm.py  membership.py  plugin.py  project.py  prompt.py  summarize.py  system.py  user.py  workspace.py
app/schemas/: __init__.py  app_setting.py  common.py  credential.py  ingest_text_request.py  invitation.py  llm.py  membership.py  plugin.py  project.py  project_membership.py  prompt.py  system.py  user.py  workspace.py
app/services/: __init__.py  app_setting_service.py  credential.py  credential_service.py  invitation_service.py  membership.py  membership_service.py  node_service.py  plugin.py  plugin_registry.py  plugin_service.py  project.py  project_membership_service.py  project_service.py  prompt.py  prompt_service.py  soft_delete_service.py  suggest_next_question.py  user.py  user_service.py  workspace.py  workspace_prune.py  workspace_prune_service.py  workspace_service.py
app/tasks/: __init__.py  example.py  ingest_tasks.py  plugin_tasks.py
app/utils/: auth.py  cache.py  chat_request.py  dependencies.py  vercel_stream.py
assets/: default_index.md
dev/docker/: otel-collector-config.yml
docs/: datum-engineering-onboarding-guide.md  datum-knowledge-base-highlights.md  db.md  default_index.md  onboarding-system-prompt.md  quore-markdown-structure-guide.md  vision-plugin.md
docs/app-design-guide/: empty-states.md  error-handling.md  index.md  loading-state.md  navigation.md  notifications.md  onboarding.md  (+1 more)
examples/: vision_example.py
infra/: docker-compose.yml  install-docker.sh  nginx.conf
scripts/: generate_credential_key.py  model_validate.py  test_model.py
tests/: conftest.py  test_providers.py
(+115 files in other folders)
